tests/machine/x/ocaml/string_index.error
File "/tmp/TestOCamlCompiler_VMValid_Goldenstring_index3048146268/001/string_index.ml", line 23, characters 34-35:
23 |   print_endline (__show (List.nth s 1));
                                       ^
Error: This expression has type string but an expression was expected of type
         'a list
